--- a/Cardna-iOS/Cardna-iOS/Source/Scene/AddCard/AddCardBottomSheet.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/AddCard/AddCardBottomSheet.storyboard
@@ -87,6 +87,9 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title=""/>
+                                        <connections>
+                                            <action selector="albumBtn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="EeQ-eL-jww"/>
+                                        </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="njT-u9-LgW">
                                         <rect key="frame" x="24" y="222" width="29" height="26.5"/>
